--- a/documentation/org.eclipse.viatra.documentation.help/src/main/asciidoc/cps/Domains.adoc
+++ b/documentation/org.eclipse.viatra.documentation.help/src/main/asciidoc/cps/Domains.adoc
@@ -1,7 +1,7 @@
 # Domains
 ifdef::env-github,env-browser[:outfilesuffix: .adoc]
-ifndef::rootdir[:rootdir: ./]
-ifndef::imagesdir[{rootdir}/../images]
+ifndef::rootdir[:rootdir: ../]
+ifndef::imagesdir[:imagesdir: {rootdir}/images]
 
 ## Cyber Physical System
 
